--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   position: absolute;
   inset: 0px;
   border-radius: 50%;
-  border: 5px solid #FFF;
+  border: 5px solid #a1a635;
   animation: prixClipFix 2s linear infinite ;
 }
 .loader::after{
